[CAMEL-16958]fix last piece of failed tests on JDK17